# my-todos

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
migrations/: 20251105211842_create_database.sql  20260204172615_todos_status_and_priority.down.sql  20260204172615_todos_status_and_priority.up.sql
src/: core.rs  database.rs  lib.rs  main.rs  ui.rs
src/ui/: pending.rs  task_list.rs
src/ui/component/: error.rs  form.rs  list.rs
src/ui/component/list/: filter.rs  sorter.rs  storage.rs  task_item.rs
