[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
thiserror = "2.0"
tokio = "1.49"
uuid = { version = "1.20", features = ["v4"] }
xilem = { git = "https://github.com/linebender/xilem" }
